# 8_puzzle

./: CMakeLists.txt  README.md  trace.txt
header/: Board.h  Node.h  Tree.h
src/: Board.cpp  Node.cpp  Tree.cpp  puzzle.cpp
tests/: test.cpp
unit_tests/: Board_test.h  unit_test.cpp
